Fix blockquote wrap

--- a/style.css
+++ b/style.css
@@ -23,7 +23,6 @@ code {
     border-radius: 3px;
     color: #1486cc;
     font-family: Inconsolata, monospace !important;
-    white-space: nowrap;
     padding: 2px 4px;
 }
 
